Optimize codebase for improved performance and maintainability:
- Refactor redundant code snippets
- Enhance algorithm efficiency
- Update outdated dependencies
- Improve code documentation for clarity
- Standardize coding conventions
- Address potential memory leaks and optimize resource utilization