@@ -1,4 +1,4 @@
-/**
+/*
  * Copyright 2022 Markus Bordihn
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
@@ -19,19 +19,20 @@
 
 package de.markusbordihn.playercompanions.item.tameitems;
 
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.Set;
-
 import de.markusbordihn.playercompanions.item.CompanionTameItem;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 
 public class TameRawMutton extends CompanionTameItem {
 
-  private static final Set<String> tameableMobTypes = new HashSet<>(Arrays.asList(
-  // @formatter:off
-    "player_companions:raptor"
-  // @formatter:on
-  ));
+  private static final Set<String> tameableMobTypes =
+      new HashSet<>(
+          List.of(
+              // @formatter:off
+              "player_companions:raptor"
+              // @formatter:on
+              ));
 
   public TameRawMutton() {
     super();
@@ -45,5 +46,4 @@ public class TameRawMutton extends CompanionTameItem {
   public Set<String> getTameableMobTypes() {
     return tameableMobTypes;
   }
-
 }
